<resources>
    <string name="app_name">To-Do List App</string>
    <string name="task_title">Task Title</string>
    <string name="task_date">Task Date</string>
    <string name="task_time">Task Time</string>
    <string name="task_priority">Task Priority</string>
    <string name="task_number">Task N of M</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority:</string>
    <string name="save">Save</string>
    <string name="high_priority">High Priority</string>
    <string name="med_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
</resources>
